# langstons_ant

./: CMakeLists.txt
src/: ant.cpp  ant.h  board.cpp  board.h  common.h  main.cpp
